--- a/org.argeo.suite.e4/OSGI-INF/l10n/bundle_fr.properties
+++ b/org.argeo.suite.e4/OSGI-INF/l10n/bundle_fr.properties
@@ -3,6 +3,7 @@ save=Sauver
 saveAll=Tout sauver
 closeAll=Tout fermer
 delete=Supprimer
+exit=Quitter
 
 # Dashboard perspective
 dashboard=Dashboard
@@ -10,7 +11,7 @@ search=Recherche
 documents=Documents
 
 # Folders perspective
-folders=Répertoires
+folders=Fichiers
 
 # Commands
 newEntity=Nouveau...
