--- a/org.argeo.suite.standard/OSGI-INF/l10n/bundle.properties
+++ b/org.argeo.suite.standard/OSGI-INF/l10n/bundle.properties
@@ -1,3 +1,7 @@
-newTask=New task...
-newPerson=New person...
-newOrganisation=New organisation...
+# New entities
+newTask=New task
+newPerson=New person
+newOrganisation=New organisation
+
+# Perspectives
+folders=Folders
