--- a/org.argeo.suite.standard/OSGI-INF/l10n/bundle_de.properties
+++ b/org.argeo.suite.standard/OSGI-INF/l10n/bundle_de.properties
@@ -1,3 +1,7 @@
-newTask=Neue Aufgabe...
-newPerson=Neue Personne..
-newOrganisation=Neue Organisation...
+# New entities
+newTask=Neue Aufgabe
+newPerson=Neue Personne
+newOrganisation=Neue Organisation
+
+# Perspectives
+folders=Ordner
