--- a/org.argeo.suite.standard/OSGI-INF/l10n/bundle_fr.properties
+++ b/org.argeo.suite.standard/OSGI-INF/l10n/bundle_fr.properties
@@ -1,3 +1,4 @@
-newTask=Nouvelle tâche...
-newPerson=Nouveau personne..
-newOrganisation=Nouvelle organisation...
+# New entities
+newTask=Nouvelle tâche
+newPerson=Nouvelle personne
+newOrganisation=Nouvelle organisation
