--- a/org.argeo.suite.e4/OSGI-INF/l10n/bundle_ar.properties
+++ b/org.argeo.suite.e4/OSGI-INF/l10n/bundle_ar.properties
@@ -1,21 +1,20 @@
 # Standard toolbar
-save=Save
-saveAll=Save all
-closeAll=Close all
-delete=Delete
+save=\u062D\u0641\u0638
+saveAll=\u0627\u062D\u0641\u0638 \u0627\u0644\u0643\u0644
+closeAll=\u0623\u063A\u0644\u0642 \u0643\u0644 \u0634\u064A\u0621
+delete=\u062D\u0630\u0641
+exit=\u0649\u062E\u0631\u062C
 
 # Dashboard perspective
-dashboard=Dashboard
+dashboard=\u0644\u0648\u062D\u0629 \u0627\u0644\u0642\u064A\u0627\u062F\u0629
 search=\u0627\u0643\u062A\u0634\u0641
-documents=Documents
+documents=\u0645\u0633\u062A\u0646\u062F\u0627\u062A
 
 # Folders perspective
-folders=Folders
+folders=\u0645\u0644\u0641\u0627\u062A
 
 # Commands
-newEntity=New...
+newEntity=\u062E\u0644\u0642...
 newTodo=\u0645\u0647\u0645\u0629 \u062C\u062F\u064A\u062F\u0629
 
 # Editors
-person=Person
-organisation=Organisation
