--- a/org.argeo.suite.e4/OSGI-INF/l10n/bundle_de.properties
+++ b/org.argeo.suite.e4/OSGI-INF/l10n/bundle_de.properties
@@ -3,6 +3,7 @@ save=Speichern
 saveAll=Alles speichern
 closeAll=Alles schlieﬂen
 delete=Entfernen
+exit=Verlassen
 
 # Dashboard perspective
 dashboard=Dashboard
@@ -10,7 +11,7 @@ search=Suchen
 documents=Dokumente
 
 # Folders perspective
-folders=Folders
+folders=Ordner
 
 # Commands
 newEntity=Neu...
