Eclipse 4 change password command

--- a/org.argeo.suite.e4/OSGI-INF/l10n/bundle.properties
+++ b/org.argeo.suite.e4/OSGI-INF/l10n/bundle.properties
@@ -4,6 +4,7 @@ saveAll=Save all
 closeAll=Close all
 delete=Delete
 exit=Exit
+changePassword=Change password...
 
 # Dashboard perspective
 dashboard=Dashboard
