--- a/org.argeo.suite.e4/OSGI-INF/l10n/bundle_de.properties
+++ b/org.argeo.suite.e4/OSGI-INF/l10n/bundle_de.properties
@@ -4,6 +4,7 @@ saveAll=Alles speichern
 closeAll=Alles schlieﬂen
 delete=Entfernen
 exit=Verlassen
+changePassword=Password ‰ndern...
 
 # Dashboard perspective
 dashboard=Dashboard
