--- a/org.argeo.suite.e4/OSGI-INF/l10n/bundle_fr.properties
+++ b/org.argeo.suite.e4/OSGI-INF/l10n/bundle_fr.properties
@@ -4,6 +4,7 @@ saveAll=Tout sauver
 closeAll=Tout fermer
 delete=Supprimer
 exit=Quitter
+changePassword=Changer de mot de passe...
 
 # Dashboard perspective
 dashboard=Dashboard
