Login/logout working in new Argeo Suite.

--- a/org.argeo.suite.ui/OSGI-INF/l10n/bundle.properties
+++ b/org.argeo.suite.ui/OSGI-INF/l10n/bundle.properties
@@ -1,5 +1,6 @@
 dashboard=dashboard
-people=contacts management
+people=contacts
 documents=documents
+locations=locations
 
 defaultWorkAppTitle=Argeo Suite
