Improve the new Argeo Suite shell.

--- a/org.argeo.suite.ui/OSGI-INF/l10n/bundle.properties
+++ b/org.argeo.suite.ui/OSGI-INF/l10n/bundle.properties
@@ -2,5 +2,6 @@ dashboard=dashboard
 people=contacts
 documents=documents
 locations=locations
+recentItems=recent items
 
-defaultWorkAppTitle=Argeo Suite
+appTitle=Argeo Suite
