--- a/publishing/org.argeo.publishing.ui/OSGI-INF/l10n/bundle.properties
+++ b/publishing/org.argeo.publishing.ui/OSGI-INF/l10n/bundle.properties
@@ -3,6 +3,7 @@ section=section
 media=media
 style=style
 
+insertParagraph=insert paragraph
 deleteParagraph=delete paragraph
 deleteSection=delete section
 
