Support embedding videos.

--- a/publishing/org.argeo.publishing.ui/OSGI-INF/l10n/bundle.properties
+++ b/publishing/org.argeo.publishing.ui/OSGI-INF/l10n/bundle.properties
@@ -7,5 +7,6 @@ insertParagraph=insert paragraph
 deleteParagraph=delete paragraph
 deleteSection=delete section
 
-insertMedia=insert media
+insertPicture=insert picture
+insertVideo=insert video
 deleteMedia=delete media
