Make it work after refactoring

--- a/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
+++ b/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
@@ -96,3 +96,13 @@ pickUp=Pick up
 # Tags
 confirmNewTag=Tag #{0} is not yet registered. Are you sure you want to create it?
 cannotCreateTag=Tag #{0} is not yet registered and you don't have enough rights to create it.
+
+# People
+people=people
+
+# Library
+content=content
+
+# Geo
+map=map
+
