Create new user as a POSIX account

--- a/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
+++ b/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
@@ -100,3 +100,6 @@ pickUp=Choisir
 # Tags
 confirmNewTag=Le tag #{0} n'existe pas encore. Voulez-vous le créer?
 cannotCreateTag=Le tag #{0} n'existe pas encore et vous n'avez pas les droits pour le créer.
+
+# Feedback messages
+allFieldsMustBeSet=Toutes les données doivent être renseignées
