Improve people UI

--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
@@ -28,6 +28,11 @@ vatId=VAT ID
 orgWizardWindowTitle=New organisation
 orgWizardPageTitle=Create an organisation
 
+# Roles
+userAdminRole=Can create users and modify them
+groupAdminRole=Can create groups and organisations and modify them
+publisherRole=Can validate and publish content
+coworkerRole=Is an active user of the organisation
 
 # ContextAddressComposite
 chooseAnOrganisation=Choose an organisation
