--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
@@ -32,6 +32,11 @@ vatId=ID TVA
 orgWizardWindowTitle=Nouvelle organisation
 orgWizardPageTitle=Créer une organisation
 
+# Roles
+userAdminRole=Peut créer des utilisateurs et les modifier
+groupAdminRole=Peut créer des groupes et des organisations et les modifier
+publisherRole=Peut publier et valider du contenu
+coworkerRole=Est un membre en activité de l'organisation
 
 # ContextAddressComposite
 chooseAnOrganisation=Choisir une organisation
