Improve people wizards

--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
@@ -11,7 +11,8 @@ appTitle=Argeo Suite
 # org.argeo.people.ui.PeopleMsg
 #
 person=Person
-organisation=Organisation
+user=user
+org=organisation
 
 # NewPersonWizard
 firstName=First Name
