--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
@@ -14,8 +14,9 @@ appTitle=Argeo Suite
 # PEOPLE
 # org.argeo.people.ui.PeopleMsg
 #
-person=Personne
-organisation=Organisation
+person=personne
+user=utilisateur
+org=organisation
 
 # NewPersonWizard
 firstName=Prénom
