Factorise People UI

--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
@@ -10,9 +10,10 @@ appTitle=Argeo Suite
 # PEOPLE
 # org.argeo.people.ui.PeopleMsg
 #
-person=Person
+person=person
 user=user
 org=organisation
+group=group
 
 # NewPersonWizard
 firstName=First Name
