--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
@@ -36,6 +36,9 @@ groupAdminRole=Can create groups and organisations and modify them
 publisherRole=Can validate and publish content
 coworkerRole=Is an active user of the organisation
 
+# Group
+chooseAMember=Choose a member
+
 # ContextAddressComposite
 chooseAnOrganisation=Choose an organisation
 street=Street
