--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
@@ -40,6 +40,9 @@ groupAdminRole=Peut créer des groupes et des organisations et les modifier
 publisherRole=Peut publier et valider du contenu
 coworkerRole=Est un membre en activité de l'organisation
 
+# Group
+chooseAMember=Choisir un membre
+
 # ContextAddressComposite
 chooseAnOrganisation=Choisir une organisation
 street=Rue
