--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle.properties
@@ -22,6 +22,7 @@ salutation=Salutation
 email=Email
 personWizardWindowTitle=New person
 personWizardPageTitle=Create a contact
+personWizardFeedback=Contact was created
 
 # NewOrgWizard
 legalName=Legal name
@@ -29,6 +30,7 @@ legalForm=Legal form
 vatId=VAT ID
 orgWizardWindowTitle=New organisation
 orgWizardPageTitle=Create an organisation
+orgWizardFeedback=Organisation was created
 
 # Roles
 userAdminRole=Can create users and modify them
