--- a/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
+++ b/swt/org.argeo.app.ui/OSGI-INF/l10n/bundle_fr.properties
@@ -26,6 +26,7 @@ salutation=Salutation
 email=Email
 personWizardWindowTitle=Nouvelle personne
 personWizardPageTitle=Créer un contact
+personWizardFeedback=Le contact a été créé
 
 # NewOrgWizard
 legalName=Nom
@@ -33,6 +34,7 @@ legalForm=Forme légale
 vatId=ID TVA
 orgWizardWindowTitle=Nouvelle organisation
 orgWizardPageTitle=Créer une organisation
+orgWizardFeedback=L'organisation a été crée
 
 # Roles
 userAdminRole=Peut créer des utilisateurs et les modifier
